--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 Tic-Tac-Toe Game
 A simple yet engaging Tic-Tac-Toe game built using HTML, CSS, and JavaScript. This project showcases basic game logic, user interaction, and responsive design principles.
+LIVE DEMO:https://adarsh0104.github.io/Tic-Tac-Toe/app.html
